--- a/web_listener/config/config.json
+++ b/web_listener/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "hans",
+    "password": "hans",
+    "database": "SwordData",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
+    "username": "hans",
+    "password": "hans",
+    "database": "SwordData",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "hans",
+    "password": "hans",
+    "database": "SwordData",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
