--- a/web_listener/package.json
+++ b/web_listener/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mysql2": "^3.1.2",
     "sequelize": "^6.28.2",
+    "sequelize-cli": "^6.6.0",
     "socket.io": "^4.6.0",
     "trpc": "^0.11.3"
   },
